--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "http": "0.0.1-security"
+    "http": "0.0.1-security",
     "fs":"0.0.1-security"
   }
 }
