--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "http": "0.0.1-security",
-    "fs":"0.0.1-security"
+    "fs":"0.0.1-security",
+    "express": "4.17.1"
   }
 }
