--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "http": "0.0.1-security",
     "fs":"0.0.1-security",
-    "express": "4.17.1",
-    "serve-static": "1.14.1"
+    "express": "4.17.1"
   }
 }
