Changing path in navigation bar

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "fs":"0.0.1-security",
-    "express": "4.17.1"
+    "express": "4.17.1",
+    "google-auth-ligbrary": "7.1.0"
   }
 }
