--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
         restart: always
         ports:
             - 8082:80
+        environment:
+            MYSQL_DATABASE: birthdayreminder_db
     birthdayreminder_db:
         image: mariadb
         container_name: birthdayreminder_db
