Added links to PMA

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
         environment:
             PMA_HOST: birthdayreminder_db
             PMA_PORT: 3306
+        links:
+            - birthdayreminder_db
     birthdayreminder_db:
         image: mariadb
         container_name: birthdayreminder_db
