--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "fs":"0.0.1-security",
     "express": "4.17.1",
-    "google-auth-library": "7.1.0"
+    "google-auth-library": "7.1.0",
+    "mysql": "2.18.1"
+
   }
 }
