--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,6 @@
     "express": "4.17.1",
     "google-auth-library": "7.1.0",
     "mysql": "2.18.1",
-    "path": "0.12.7"
-
+    "ejs": "3.1.6"
   }
 }
