--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "express": "4.17.1",
     "google-auth-library": "7.1.0",
     "mysql": "2.18.1",
-    "ejs": "3.1.6"
+    "ejs": "3.1.6",
+    "path": "0.12.7"
   }
 }
